    + Use external cache dir (~/.freetz-ccache)
  * fakeroot: bump version to 1.18.1
  * use host tar to unpack packages again as busybox' tar doesn't support pax (aka POSIX 1003.1-2001) tar format
  * Move each library-package into separate subdirectory (#1093)
  * Readd unsquashfs and mksquashfs without lzma support (needed for 3370)
  * stripping of kernel modules added
  * kconfig 2.6.39
  * menu configuration cache (Config.in.cache)
  * target-toolchain:
    + Update gcc-4.6.x version to 4.6.2
    + Update uClibc-0.9.32.x version to 0.9.32.1
  * Bump ticksum to 0.2.1, adding copyright stuff to source and a README file

- New tools and hooks:

- New patches (read online help for more info):
    * replace dtrace: execute a custom action by phone
    * disable console on serial port: do not start a console/shell on serial
      port
    * replace onlinechanged: execute AVM, Freetz and user-defined scripts
      whenever the external IP address changes. In opposite to AVM's original
      this version also works on boxes behind a NAT (e.g. IP clients using an
      existing internet connection) and on boxes where AVM onlinechanged is not
      called reliably.
    * modify umtsd: AVM's umtsd will only be started if a *known* umts modem is detected.
    * custom UDEV rules: You could use own rules for UDEV.
    * remove showdsldstat: Removes the showdsldstat utility which shows you the cpmac mode,
      connect time, external ip (has not to be the public ip!), route and dns servers.
      Also the state of IPv6, voip and tr069.
    * remove jffs2.ko: remove JFFS2 kernel module, saving 144-192 kB of
      uncompressed firmware space
    * disable multid services: dns, dhcp and llmnr could be remapped with libmultid

- New packages, libs, modules:
    * avahi 0.6.30
    * dbus 1.5.6
    * libmultid 0.5
    * protobuf-c 0.15
    * smusbutil 1.1

- Updated tools and hooks:
    * get_ip:
     + default method can be set via web interface