@@ -14,6 +14,7 @@ Latest changes:
   * Move each library-package into separate subdirectory (#1093)
   * Readd unsquashfs and mksquashfs without lzma support (needed for 3370)
   * stripping of kernel modules added
+  * stripping of shell scripts added
   * kconfig 2.6.39
   * menu configuration cache (Config.in.cache)
   * target-toolchain:
